--- a/index.html
+++ b/index.html
@@ -1,22 +1,73 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Js Geek-Login</title>
 	<meta charset="UTF-8">
+	<title>Js Geek-Login</title>
+	<!--favicon-->
+	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon"> <!--could be with .png or .gif extension-->	
+	
+	<!-- css libraries-->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="pageStyle.css">
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+	<!-- jquery libraries-->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script type="text/javascript" src="login/login.js"></script>	
+	<!--js code-->
+	<script type="text/javascript" src="login/login.js"></script>
+	
 </head>
 <body>
-<p>Hi, please fill the below fields to have access to our Quiz</p>
+<!-- Bootstrap toturial:http://www.w3schools.com/bootstrap/bootstrap_images.asp -->
+	
+	<!-- header body -->
+	<div class="navbar navbar-inverse navbar-stactic-top">
+      <div class="container">
+	        <!--<a href='#' class="navbar-brand">Home</a>
+        	<a href='#' onclick="alert('Comming Soon')" class="navbar-brand">Topics</a>-->        	
 
-<form action="login/login.js" method="POST"><!--action attri defines the action to be performed when the form is submitted.-->
-	<fieldset> <!--The <fieldset> element groups related data in a form-->
-		<legend>Login Form-The fileds with (*) are require</legend>
-		<h3>Username*:</h3> <input type="text" id="unameID" name="username" >
-		<h3>Password*:</h3> <input type="password" id="accessID" name="access"><br><br>
-		<input type="button" id="submit" value="Submit" title="click submit to login">
-	</fieldset>
-</form>
-
+	        <div class="collapse navbar-collapse navHeaderCollapse">
+	           <ul class="nav navbar-nav navbar-right">
+	             <li class="active"><a href="extraPage.php">Contact Us</a></li>
+	             <li><a href="#" onclick="alert('Comming Soon')">Blog</a></li>
+	             <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
+	    		</ul>          
+	        </div>
+        </div>
+    </div>
+   
+	<!-- form body -->	
+	<center>
+	<!--<div><img src="resurces/jsIcon2.png" class="img-circle" width="235" height="103"></div>-->
+	<h3>Hi, please pick a Nick Name to have access to our Quiz</h3></center>
+	<div class="jumbotron boxlogin">		
+		<form><!--action attri defines the action to be performed when the form is submitted.-->
+			<fieldset> <!--The <fieldset> element groups related data in a form-->
+				<center><legend>Login</legend></center>
+				
+				<div class="form-group">
+					<label>Nick name* :</label><input type="text"  maxlength="12" id="unameID" title="Must have at least 12 characteres" name="username" placeholder="nick.js">
+					<div class="checkbox">
+						<label><input type="checkbox"> Remember me</label>
+					</div>
+				</div>
+				
+				<label id="validate"></label>				
+				<!--<div class="form-group">
+					<label>Password*:</label> <input type="password" id="accessID" name="access"><br><br>
+				</div>-->				
+				<center><input type="button" id="submit" value="Submit" class="btn btn-info " title="click submit to login"></center>
+			</fieldset>
+		</form>
+	</div>
+	
+	<!-- footer -->
+	<div class="navbar navbar-default navbar-fixed-bottom">
+	     <div class="container">
+	      	<p class="navbar-text pull-left">Make It By: DRobin.</p>
+       		<a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
+       		<!--<button type="button" class="navbar-btn btn-info btn pull-left-center">Info</button>-->
+      	 	<button type="button" class="navbar-btn btn-primary btn pull-left-center">Facebook</button>
+	      </div>
+	</div>
 </body>
 </html>
