--- a/quiz2.html
+++ b/quiz2.html
@@ -5,14 +5,14 @@
 	<title>Js Geek</title>
 	<!--favicon-->
 	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon">
-
+	<!-- jQuery google Dns-->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>	
 	<!--bootstrap libraries-->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-	<script type="text/javascript" src="quiz.js"></script>
+	<script type="text/javascript" src="quiz2.js"></script>
 </head>
 <body>
 	<!-- Header-->
@@ -23,7 +23,7 @@
         	<div class="dropdown">
 	        	<a href='#' class="navbar-brand dropdown-toggle" data-toggle="dropdown">Levels<span class="caret"></span></a>
 	        	<ul class="dropdown-menu">
-					<li><a href="quiz2.html">Js Quiz 2</a></li>
+					<li><a href="quiz.html">Js Quiz 1</a></li>
 					<li><a href="#">Js Quiz 3</a></li>
 					<li><a href="#">Js Quiz 4</a></li>
 				</ul>
@@ -47,47 +47,50 @@
 	</div>
 
 	<center>
-		<div id="Ques1">
+		<div id="Ques6">
 		<div class="jumbotron">	
-			<p id='q1'></p>					<!--the First question-->
-			<input type="radio" name="ch0" value="cho1" checked>PHP<br> <!--the Choises-->
-			<input type="radio" name="ch0" value="cho2">HTML<br>
-			<input type="radio" name="ch0" value="cho3">XML<br>
-			<input type="radio" name="ch0" value="cho4">JS<br>
+			<p id='q6'></p>					<!--the First question-->
+			<input type="radio" name="ch0" value="6flase" checked>False<br> <!--the Choises-->
+			<input type="radio" name="ch0" value="6true">True<br>
 		</div>	
 		</div>
 	
-		<div id="Ques2" hidden>
+		<div id="Ques7" hidden>
 		<div class="jumbotron">
-			<p id="q2"></p>	<!--the second question-->
-			<input type="radio" name="ch1" value="2true" checked>true<br>
-			<input type="radio" name="ch1" value="2false">false<br>
+			<p id="q7"></p>	<!--the second question-->
+			<input type="radio" name="ch1" value="7Incorr" checked>It is use to return values<br>
+			<input type="radio" name="ch1" value="7Incorr">It is use to let a varible keep multiple data type.<br>
+			<input type="radio" name="ch1" value="7corr">It is use to declare a varible only for a block scope.<br>
+			<input type="radio" name="ch1" value="7Incorr">It is a keyword to avoid hoisting behavior.<br>
 		</div>	
 		</div>
 
-		<div id="Ques3" hidden>
+		<div id="Ques8" hidden>
 		<div class="jumbotron">
-			<p id="q3"></p>	<!--the third question-->
-			<input type="radio" name="ch2" value="3true" checked>true<br>
-			<input type="radio" name="ch2" value="3false">false<br>
+			<p id="q8"></p>	<!--the third question-->
+			<input type="radio" name="ch2" value="8Incorr" checked>Strings,Number,Date<br>
+			<input type="radio" name="ch2" value="8Incorr">Array,Functions,Strings<br>
+			<input type="radio" name="ch2" value="8Incorr">Promises,Functions,Date<br>
+			<input type="radio" name="ch2" value="8corr">Array,Functions,Objects<br>
 		</div>	
 		</div>
 
-		<div id="Ques4" hidden>
+		<div id="Ques9" hidden>
 			<div class="jumbotron">
-				<p id="q4"></p>	<!--the forth question-->
-				<input type="radio" name="ch3" value="4true" checked>true<br>
-				<input type="radio" name="ch3" value="4false">false<br>
+				<p id="q9"></p>	<!--the forth question-->
+				<input type="radio" name="ch3" value="9Incorr" checked>It is an object to cllect data<br>
+				<input type="radio" name="ch3" value="9Incorr">Object that returns iterators<br>
+				<input type="radio" name="ch3" value="9corr">Allows to Iterate Objects in Js<br>
 			</div>	
 		</div>
 
-		<div id="Ques5" hidden>
+		<div id="Ques10" hidden>
 			<div class="jumbotron">
-				<p id="q5"></p>	<!--the fith question-->
-				<input type="radio" name="ch4" value="5go" checked>Go<br>
-				<input type="radio" name="ch4" value="5sw">Swift<br>
-				<input type="radio" name="ch4" value="5nod">Node<br>
-				<input type="radio" name="ch4" value="5ja">Java<br>
+				<p id="q10"></p>	<!--the fith question-->
+				<input type="radio" name="ch4" value="10Incorr" checked>It is a function to Generate mores functions.<br>
+				<input type="radio" name="ch4" value="10corr">Function that Returns multiples values.<br>
+				<input type="radio" name="ch4" value="10Incorr">Function that allows blocking code.<br>
+				<input type="radio" name="ch4" value="10Incorr">Function to make block and wait code.<br>
 			</div>	
 		</div>
 	
