--- a/quiz.html
+++ b/quiz.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Js Geek</title>
+	<title>Js Quiz Level 1</title>
 	<!--favicon-->
 	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon">
 
@@ -18,23 +18,19 @@
 	<!-- Header-->
 	<div class="navbar navbar-inverse navbar-stactic-top">
     	<div class="container">
-	        <!--<a href='#' class="navbar-brand">Home</a>
-        	<a href='#' class="navbar-brand">Topics</a>-->
-        	<div class="dropdown">
-	        	<a href='#' class="navbar-brand dropdown-toggle" data-toggle="dropdown">Levels<span class="caret"></span></a>
-	        	<ul class="dropdown-menu">
-					<li><a href="quiz2.html">Js Quiz 2</a></li>
-					<li><a href="#">Js Quiz 3</a></li>
-					<li><a href="#">Js Quiz 4</a></li>
-				</ul>
-        	</div>
 
 	        <div class="collapse navbar-collapse navHeaderCollapse">
 	    		<ul class="nav navbar-nav navbar-right">
 	             <li class="active"><a href="extraPage.php">Contact Us</a></li>
-	             <li><a href="#" onclick="JavaScript:alert('Coming soon');">Blog</a></li>
 	             <li><a href="#" onclick="JavaScript:alert('Coming soon');">About Js Quiz</a></li>
-		   		</ul>          
+	             <li><a href="index.html">Logout</a></li>
+		   		</ul>
+
+		   		<ul class="nav nav-pills" role="tablist">
+					<li><a href="quiz2.html">Js Quiz 2</a></li>
+					<li><a href="#">Js Quiz 3</a></li>
+					<li><a href="#">Js Quiz 4</a></li>
+				</ul>          
 	        </div>
         </div>
     </div>
