--- a/quiz2.html
+++ b/quiz2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Js Geek</title>
+	<title>Js Quiz Level 2</title>
 	<!--favicon-->
 	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon">
 	<!-- jQuery google Dns-->
@@ -10,6 +10,7 @@
 	<!--bootstrap libraries-->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="pageStyle.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 	<script type="text/javascript" src="quiz2.js"></script>
@@ -18,23 +19,18 @@
 	<!-- Header-->
 	<div class="navbar navbar-inverse navbar-stactic-top">
     	<div class="container">
-	        <!--<a href='#' class="navbar-brand">Home</a>
-        	<a href='#' class="navbar-brand">Topics</a>-->
-        	<div class="dropdown">
-	        	<a href='#' class="navbar-brand dropdown-toggle" data-toggle="dropdown">Levels<span class="caret"></span></a>
-	        	<ul class="dropdown-menu">
+	        <div class="collapse navbar-collapse navHeaderCollapse">
+	    		<ul class="nav navbar-nav navbar-right">
+	             <li class="active"><a href="extraPage.php">Contact Us</a></li>
+	             <li><a href="#" onclick="JavaScript:alert('Coming soon');">About Js Quiz</a></li>
+	             <li><a href="index.html">Logout</a></li>
+		   		</ul>
+
+		   		<ul class="nav nav-pills" role="tablist">
 					<li><a href="quiz.html">Js Quiz 1</a></li>
 					<li><a href="#">Js Quiz 3</a></li>
 					<li><a href="#">Js Quiz 4</a></li>
 				</ul>
-        	</div>
-
-	        <div class="collapse navbar-collapse navHeaderCollapse">
-	    		<ul class="nav navbar-nav navbar-right">
-	             <li class="active"><a href="extraPage.php">Contact Us</a></li>
-	             <li><a href="#" onclick="JavaScript:alert('Coming soon');">Blog</a></li>
-	             <li><a href="#" onclick="JavaScript:alert('Coming soon');">About Js Quiz</a></li>
-		   		</ul>          
 	        </div>
         </div>
     </div>
