--- a/welcome.html
+++ b/welcome.html
@@ -30,16 +30,13 @@
 	<!-- header -->
 	<div class="navbar navbar-inverse navbar-stactic-top">
       <div class="container">
-	        <div class="navbar-header">
-			  <a class="navbar-brand" href="#">Js Quiz</a>
-			</div>
-
 	        <div class="collapse navbar-collapse navHeaderCollapse">
-	           <ul class="nav navbar-nav navbar-right">
-	             <li class="active"><a href="extraPage.php">Contact Us</a></li>
-	             <li><a href="#" onclick="alert('Comming Soon')">Blog</a></li>
-	              <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
-	    		</ul>          
+	        	<ul class="nav navbar-nav navbar-right">
+	             <li class="active"><a href="extraPage.php">Contact Us</a></li>	             
+	             <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
+	             <li><a href="index.html">Logout</a></li>
+	    		</ul>
+	    		<h3 class="text-muted">Js Quiz</h3>          
 	        </div>
         </div>
     </div>
