Make the page Responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<!-- jquery libraries-->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+
+	<!-- to make the page responsive -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+
 	<!--js code-->
 	<script type="text/javascript" src="login/login.js"></script>
 	
@@ -27,8 +32,8 @@
 
 	        <div class="collapse navbar-collapse navHeaderCollapse">
 	           <ul class="nav navbar-nav navbar-right">
-	             <li class="active"><a href="extraPage.php">Contact Us</a></li>
-	             <!--<li><a href="#" onclick="alert('Comming Soon')">Blog</a></li>-->
+	             <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>
+	             <li><a href="#" onclick="alert('Comming Soon')">Blog</a></li>-->
 	             <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
 	    		</ul> 
 	    		<h3 class="text-muted">Js Quiz</h3>
@@ -42,7 +47,7 @@
 	<h3 class="firstMsg">Hi, Please Pick a Nick Name To Have Access to Our Quiz</h3></center>
 	<div class="jumbotron boxlogin">		
 		<form><!--action attri defines the action to be performed when the form is submitted.-->
-			<fieldset> <!--The <fieldset> element groups related data in a form-->
+			<!--<fieldset>--> <!--The <fieldset> element groups related data in a form-->
 				<center>
 				<legend class="brand">Js Quiz</legend>
 				
@@ -61,17 +66,16 @@
 				</div>-->				
 				<input type="button" id="submit" value="Submit" class="btn btn-lg btn-primary btn-block" title="click submit to login">
 				</center>
-			</fieldset>
+			<!--</fieldset>-->
 		</form>
 	</div>
 	
 	<!-- footer -->
 	<div class="navbar navbar-default navbar-fixed-bottom">
 	     <div class="container">
-	      	<p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: DRobin.</p>
+	      	<p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: Robin Hurtado</p>
        		<a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-       		<!--<button type="button" class="navbar-btn btn-info btn pull-left-center">Info</button>-->
-      	 	<button type="button" class="navbar-btn btn-primary btn pull-left-center">Facebook</button>
+      	 	<a href="https://www.facebook.com/robin.aven" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
 	      </div>
 	</div>
 </body>
