--- a/quiz.html
+++ b/quiz.html
@@ -12,6 +12,10 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+	<!-- to make the page responsive -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+
 	<script type="text/javascript" src="quiz.js"></script>
 </head>
 <body>
@@ -21,13 +25,13 @@
 
 	        <div class="collapse navbar-collapse navHeaderCollapse">
 	    		<ul class="nav navbar-nav navbar-right">
-	             <li class="active"><a href="extraPage.php">Contact Us</a></li>
+	             <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>-->
 	             <li><a href="#" onclick="JavaScript:alert('Coming soon');">About Js Quiz</a></li>
 	             <li><a href="index.html">Logout</a></li>
 		   		</ul>
 
 		   		<ul class="nav nav-pills" role="tablist">
-					<li><a href="quiz2.html">Js Quiz 2</a></li>
+					<li class="active"><a href="quiz2.html">Js Quiz 2</a></li>
 					<li><a href="#">Js Quiz 3</a></li>
 					<li><a href="#">Js Quiz 4</a></li>
 				</ul>          
@@ -38,7 +42,7 @@
     <div class="container">    
 	    <div class="row">&nbsp;</div>
 	    <!-- body -->
-		<h3>The following questions are about a programming language computer called JavaScript so if you feel that you can resolve it then just go ahead..<h3>
+		<h3>The following questions are about a programming language computer called JavaScript so if you feel that you can resolve them then just go ahead..<h3>
 		
 	</div>
 
@@ -46,59 +50,58 @@
 		<div id="Ques1">
 		<div class="jumbotron">	
 			<p id='q1'></p>					<!--the First question-->
-			<input type="radio" name="ch0" value="cho1" checked>PHP<br> <!--the Choises-->
-			<input type="radio" name="ch0" value="cho2">HTML<br>
-			<input type="radio" name="ch0" value="cho3">XML<br>
-			<input type="radio" name="ch0" value="cho4">JS<br>
+			<input type="radio" name="ch0" value="1incorr" checked>PHP<br> <!--the Choises-->
+			<input type="radio" name="ch0" value="1incorr">HTML<br>
+			<input type="radio" name="ch0" value="1incorr">XML<br>
+			<input type="radio" name="ch0" value="1corr">JS<br>
 		</div>	
 		</div>
 	
 		<div id="Ques2" hidden>
 		<div class="jumbotron">
 			<p id="q2"></p>	<!--the second question-->
-			<input type="radio" name="ch1" value="2true" checked>true<br>
-			<input type="radio" name="ch1" value="2false">false<br>
+			<input type="radio" name="ch1" value="2true" checked>True<br>
+			<input type="radio" name="ch1" value="2false">False<br>
 		</div>	
 		</div>
 
 		<div id="Ques3" hidden>
 		<div class="jumbotron">
 			<p id="q3"></p>	<!--the third question-->
-			<input type="radio" name="ch2" value="3true" checked>true<br>
-			<input type="radio" name="ch2" value="3false">false<br>
+			<input type="radio" name="ch2" value="3incorr" checked>True<br>
+			<input type="radio" name="ch2" value="3corr">False<br>
 		</div>	
 		</div>
 
 		<div id="Ques4" hidden>
 			<div class="jumbotron">
 				<p id="q4"></p>	<!--the forth question-->
-				<input type="radio" name="ch3" value="4true" checked>true<br>
-				<input type="radio" name="ch3" value="4false">false<br>
+				<input type="radio" name="ch3" value="4true" checked>True<br>
+				<input type="radio" name="ch3" value="4false">False<br>
 			</div>	
 		</div>
 
 		<div id="Ques5" hidden>
 			<div class="jumbotron">
 				<p id="q5"></p>	<!--the fith question-->
-				<input type="radio" name="ch4" value="5go" checked>Go<br>
-				<input type="radio" name="ch4" value="5sw">Swift<br>
-				<input type="radio" name="ch4" value="5nod">Node<br>
-				<input type="radio" name="ch4" value="5ja">Java<br>
+				<input type="radio" name="ch4" value="5incorr" checked>Go<br>
+				<input type="radio" name="ch4" value="5incorr">Swift<br>
+				<input type="radio" name="ch4" value="5corr">Node<br>
+				<input type="radio" name="ch4" value="5incorr">Java<br>
 			</div>	
 		</div>
 	
 		<input type="button" class="btn btn-default" id="next" value="Next" title="Go To The Next Question">
-		<input type="button" id="begin" value="Begin Again" title="Go To The Begining" hidden>
+		<input type="button" class="btn btn-default" id="begin" value="Begin Again" title="Go To The Begining" hidden>
 		<h2 id="done" hidden></h2>
 	</center>
 
 	<!-- footer -->
  	<div class="navbar navbar-default navbar-fixed-bottom">
      <div class="container">
-       <p class="navbar-text pull-left">Make It By: DRobin</p>
+       <p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: Robin Hurtado</p>
        <a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-       <!--<button type="button" class="navbar-btn btn-info btn pull-left-center">Info</button>-->
-       <button type="button" class="navbar-btn btn-primary btn pull-left-center">Facebook</button>
+       <a href="https://www.facebook.com/robin.aven" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
       </div>
   	</div>
 </body>
