--- a/welcome.html
+++ b/welcome.html
@@ -12,6 +12,10 @@
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	
+	<!-- to make the page responsive -->
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+
 	<script type="text/javascript">
 		 userName = sessionStorage.username;
 		$(document).ready(function() {
@@ -32,7 +36,7 @@
       <div class="container">
 	        <div class="collapse navbar-collapse navHeaderCollapse">
 	        	<ul class="nav navbar-nav navbar-right">
-	             <li class="active"><a href="extraPage.php">Contact Us</a></li>	             
+	             <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>-->	             
 	             <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
 	             <li><a href="index.html">Logout</a></li>
 	    		</ul>
@@ -75,12 +79,11 @@
 
  	<!-- footer -->
  	<div class="navbar navbar-default navbar-fixed-bottom">
-    	<div class="container">
-     		<p class="navbar-text pull-left">Make it By: DRobin</p>
-       		<a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-       		<!--<button type="button" class="navbar-btn btn-info btn pull-left-center">Info</button>-->
-       		<button type="button" id="fb" class="navbar-btn btn-primary btn pull-left-center">Facebook</button>
-    	</div>
+     <div class="container">
+       <p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: Robin Hurtado</p>
+       <a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
+       <a href="https://www.facebook.com/robin.aven" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
+      </div>
   	</div>
 </body>
 </html>
