--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<!-- jquery libraries-->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 
+	<link rel="stylesheet" type="text/css" href="pageStyle.css">
+
 	<!-- to make the page responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
@@ -71,12 +73,12 @@
 	</div>
 	
 	<!-- footer -->
-	<div class="navbar navbar-default navbar-fixed-bottom">
+	<nav class="footer">
 	     <div class="container">
 	      	<p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: Robin Hurtado</p>
        		<a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
       	 	<a href="https://www.facebook.com/robin.aven" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
 	      </div>
-	</div>
+	</nav>
 </body>
 </html>
