Improve the footer in the html files
Improve the footer in the htmls files by adding an iframe tag in each html files and creating a new file: footer.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Js Quiz-Login</title>
 	<!--favicon-->
-	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon"> <!--could be with .png or .gif extension-->	
+	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon"> <!--could be with 
+	.png or .gif extension-->	
 	
 	<!-- css libraries-->
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -12,26 +13,18 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 	<!-- jquery libraries-->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-	<link rel="stylesheet" type="text/css" href="pageStyle.css">
-
 	<!-- to make the page responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-
 	<!--js code-->
 	<script type="text/javascript" src="login/login.js"></script>
 	
 </head>
-<body>
-<!-- Bootstrap toturial:http://www.w3schools.com/bootstrap/bootstrap_images.asp -->
-	
+<body>	
 	<!-- header body -->
 	<div class="navbar navbar-inverse navbar-stactic-top">
       <div class="container">
 	        <!--<a href='#' class="navbar-brand">Home</a>
         	<a href='#' onclick="alert('Comming Soon')" class="navbar-brand">Topics</a>-->        	
-
 	        <div class="collapse navbar-collapse navHeaderCollapse">
 	           <ul class="nav navbar-nav navbar-right">
 	             <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>
@@ -46,7 +39,7 @@
 	<!-- form body -->	
 	<center>
 	<!--<div><img src="resurces/jsIcon2.png" class="img-circle" width="235" height="103"></div>-->
-	<h3 class="firstMsg">Hi, Please Pick a Nick Name To Have Access to Our Quiz</h3></center>
+	<em class="firstMsg">Hello, it is great having you here, Please Pick a Nick Name To Have Access to Our Quiz</em></center>
 	<div class="jumbotron boxlogin">		
 		<form><!--action attri defines the action to be performed when the form is submitted.-->
 			<!--<fieldset>--> <!--The <fieldset> element groups related data in a form-->
@@ -73,12 +66,6 @@
 	</div>
 	
 	<!-- footer -->
-	<nav class="footer">
-	     <div class="container">
-	      	<p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: Robin Hurtado</p>
-       		<a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-      	 	<a href="https://www.facebook.com/robin.aven" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
-	      </div>
-	</nav>
+	<iframe src="footer.html" frameborder="0" width="100%" height="58px"></iframe>
 </body>
 </html>
