--- a/quiz2.html
+++ b/quiz2.html
@@ -16,7 +16,6 @@
 
 	<!-- to make the page responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 
 	<script type="text/javascript" src="quiz2.js"></script>
 </head>
@@ -101,12 +100,6 @@
 	</center>
 
  	<!-- footer -->
- 	<div class="navbar navbar-default navbar-fixed-bottom">
-     <div class="container">
-       <p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: Robin Hurtado</p>
-       <a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-       <a href="https://www.facebook.com/robin.aven" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
-      </div>
-  	</div>
+	<iframe src="footer.html" frameborder="0" scrolling="no" width="100%" height="58px" style="margin-top: 13%"></iframe>
 </body>
 </html>
