--- a/quiz.html
+++ b/quiz.html
@@ -97,12 +97,6 @@
 	</center>
 
 	<!-- footer -->
- 	<div class="navbar navbar-default navbar-fixed-bottom">
-     <div class="container">
-       <p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: Robin Hurtado</p>
-       <a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-       <a href="https://www.facebook.com/robin.aven" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
-      </div>
-  	</div>
+	<iframe src="footer.html" frameborder="0" width="100%" height="58px" style="margin-top: 10%"></iframe>
 </body>
 </html>
