--- a/welcome.html
+++ b/welcome.html
@@ -14,18 +14,17 @@
 	
 	<!-- to make the page responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 
 	<script type="text/javascript">
 		 userName = sessionStorage.username;
 		$(document).ready(function() {
-			if (userName === undefined ) userName='User' 
-			document.getElementById("wel").innerHTML="!!Welcome "+userName+
+			if (userName === undefined ) userName = 'User' 
+			document.getElementById("wel").innerHTML = "!!Welcome "+userName+
 		", Congratulation now you are in our web site lets look at what can you do here¡¡";
 			//fires when hit the facebook button
 			$("#fb").click(function(){
 				window.location = "http://facebook.com";
-			})	
+			});
 		});
 		 
 	</script>
@@ -69,7 +68,13 @@
 		        <h4 class="modal-title">Js Quiz</h4>
 		      </div>
 		      <div class="modal-body">
-		        <p>Hello, This quiz is to have a good opportunity to challenge yourself about a great and exciting programming language that is Javascript, invented By: Brendan Eich in 10 days in May 1995.<br>The evolution of Javascript is so hight that you can use Js on the serve side, you can control Robots, open up web sockets for always-on communication, get data on geographical location and device features such as accelerometer, and more.<br>It's a great time to learn Js. </p>
+		        <p>Hello, The reason for this quiz is to have a good opportunity to challenge yourself about
+		         a great and exciting programming language that is Javascript, invented By: Brendan Eich in
+		         10 days in May 1995.<br>The evolution of Javascript is so high that you can use J.s on the 
+		         server side, you also can control Robots, open up web sockets for always-on communication, 
+		         get data on geographical location and device features such as accelerometer, and much more.
+		 		<br>So believe me, it is a great time to learn Js.
+		        </p>
 		      </div>
 		      <div class="modal-footer">
 		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -79,12 +84,6 @@
  	</div>
 
  	<!-- footer -->
- 	<footer>
-     <div class="container">
-       <p class="navbar-text pull-left">&copy; 2016 Js Quiz. Make It By: Robin Hurtado</p>
-       <a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-       <a href="https://www.facebook.com/robin.aven" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
-      </div>
-  	</footer>
+	<iframe src="footer.html" frameborder="0" width="100%" height="58px" style="margin-top: 3%"></iframe>
 </body>
 </html>
