--- a/welcome.html
+++ b/welcome.html
@@ -84,6 +84,13 @@
  	</div>
 
  	<!-- footer -->
-	<iframe src="footer.html" frameborder="0" width="100%" height="58px" style="margin-top: 3%"></iframe>
+	<!--<iframe src="footer.html" frameborder="0" width="100%" height="58px" style="margin-top: 3%"></iframe>-->
+	<footer>
+     <div class="container">
+      	<p class="navbar-text pull-left">&copy; <em id="currYear"></em> Js Quiz. Make It By: Robin Hurtado</p>
+   		<a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
+  	 	<a href="https://www.facebook.com/robin.aven" style="float:left;" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
+      </div>
+	</footer>
 </body>
 </html>
