Move the quiz2 link
Move the quiz2 link next to the "next" button

--- a/quiz.html
+++ b/quiz.html
@@ -30,11 +30,7 @@
 	             <li><a href="index.html">Logout</a></li>
 		   		</ul>
 
-		   		<ul class="nav nav-pills" role="tablist">
-					<li class="active"><a href="quiz2.html">Js Quiz 2</a></li>
-					<li><a href="#">Js Quiz 3</a></li>
-					<li><a href="#">Js Quiz 4</a></li>
-				</ul>          
+		   		       
 	        </div>
         </div>
     </div>
@@ -93,6 +89,7 @@
 	
 		<input type="button" class="btn btn-default" id="next" value="Next" title="Go To The Next Question">
 		<input type="button" class="btn btn-default" id="begin" value="Begin Again" title="Go To The Begining" hidden>
+		<a href="quiz2.html">Js Quiz 2</a>
 		<h2 id="done" hidden></h2>
 	</center>
 
