--- a/quiz2.html
+++ b/quiz2.html
@@ -78,7 +78,7 @@
 		<div id="Ques9" hidden>
 			<div class="jumbotron">
 				<p id="q9"></p>	<!--the forth question-->
-				<input type="radio" name="ch3" value="9Incorr" checked>It is an object to cllect data<br>
+				<input type="radio" name="ch3" value="9Incorr" checked>It is an object to collect data<br>
 				<input type="radio" name="ch3" value="9Incorr">Object that returns iterators<br>
 				<input type="radio" name="ch3" value="9corr">Allows to Iterate Objects in Js<br>
 			</div>	
