--- a/welcome.html
+++ b/welcome.html
@@ -51,7 +51,7 @@
     	<div class="jumbotron">
     	 	<center>
     	 		<h1 id="wel"></h1>
-				<p>let's do it just click on "J.S Quiz" below and you can start challenge yourselft</p>
+				<p>let's do it just click on "J.S Quiz" below and you can start challenging yourselft</p>
     		 	<a class="btn btn-default" href="quiz.html" role="button">J.S Quiz</a>
 	         	<button class="btn btn-info" data-toggle="modal" data-target="#infoWindow">Info</button>
     		</center>
