Add folders to improve app structure

--- a/html/quiz.html
+++ b/html/quiz.html
@@ -4,19 +4,18 @@
 	<meta charset="UTF-8">
 	<title>Js Quiz Level 1</title>
 	<!--favicon-->
-	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon">
+	<link rel="icon" href="../resurces/jsfavicon.ico" type="image/x-icon">
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<!--bootstrap libraries-->
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+	<!--css -->
+	<link rel="stylesheet" type="text/css" href="../css/pageStyle.css">
 	<!-- to make the page responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-
-	<script type="text/javascript" src="quiz.js"></script>
+	<!--js code-->
+	<script type="text/javascript" src="../js/quiz.js"></script>
 </head>
 <body>
 	<!-- Header-->
@@ -27,9 +26,8 @@
 	    		<ul class="nav navbar-nav navbar-right">
 	             <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>-->
 	             <li><a href="#" onclick="JavaScript:alert('Coming soon');">About Js Quiz</a></li>
-	             <li><a href="index.html">Logout</a></li>
+	             <li><a href="../index.html">Logout</a></li>
 		   		</ul>
-
 
 	        </div>
         </div>
@@ -38,7 +36,7 @@
     <div class="container">
 	    <div class="row">&nbsp;</div>
 	    <!-- body -->
-		<h3>The following questions are about a programming language computer called JavaScript so if you feel that you can resolve them then just go ahead..<h3>
+		<h3>The following questions are about a programming language called JavaScript so if you feel that you can resolve them then just go ahead..<h3>
 
 	</div>
 
