--- a/html/quiz2.html
+++ b/html/quiz2.html
@@ -4,20 +4,18 @@
 	<meta charset="UTF-8">
 	<title>Js Quiz Level 2</title>
 	<!--favicon-->
-	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon">
+	<link rel="icon" href="../resurces/jsfavicon.ico" type="image/x-icon">
 	<!-- jQuery google Dns-->
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<!--bootstrap libraries-->
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<!--css -->
-	<link rel="stylesheet" type="text/css" href="pageStyle.css">
-
+	<link rel="stylesheet" type="text/css" href="../css/pageStyle.css">
 	<!-- to make the page responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<script type="text/javascript" src="quiz2.js"></script>
+	<!--js code-->
+	<script type="text/javascript" src="../js/quiz2.js"></script>
 </head>
 <body>
 	<!-- Header-->
@@ -27,7 +25,7 @@
 	    		<ul class="nav navbar-nav navbar-right">
 	             <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>-->
 	             <li><a href="#" onclick="JavaScript:alert('Coming soon');">About Js Quiz</a></li>
-	             <li><a href="index.html">Logout</a></li>
+	             <li><a href="../index.html">Logout</a></li>
 		   		</ul>
 
 		   		<ul class="nav nav-pills" role="tablist">
