--- a/html/welcome.html
+++ b/html/welcome.html
@@ -4,14 +4,13 @@
 	<meta charset="UTF-8">
 	<title>Welcome to Js Quiz</title>
 	<!--favicon-->
-	<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon">
-
+	<link rel="icon" href="../resurces/jsfavicon.ico" type="image/x-icon">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<!-- bootstrap libraries-->
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
+  <!--css -->
+  <link rel="stylesheet" type="text/css" href="../css/pageStyle.css">
 	<!-- to make the page responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,42 +19,40 @@
 		$(document).ready(function() {
 			if (userName === undefined ) userName = 'User'
 			document.getElementById("wel").innerHTML = "!!Welcome "+userName+
-		", Congratulation now you are in our web site lets look at what can you do here¡¡";
+		", Congratulation now you are in our web site lets look at what you can do here¡¡";
 			//fires when hit the facebook button
 			$("#fb").click(function(){
 				window.location = "http://facebook.com";
 			});
 		});
-
 	</script>
 </head>
 <body>
 
 	<!-- header -->
 	<div class="navbar navbar-inverse navbar-stactic-top">
-      <div class="container">
-	        <div class="collapse navbar-collapse navHeaderCollapse">
-	        	<ul class="nav navbar-nav navbar-right">
-	             <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>-->
-	             <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
-	             <li><a href="index.html">Logout</a></li>
-	    		</ul>
-	    		<h3 class="text-muted">Js Quiz</h3>
-	        </div>
-        </div>
-    </div>
-    <div class="row">&nbsp;</div>
-
-    <!-- body -->
     <div class="container">
-    	<div class="jumbotron">
-    	 	<center>
-    	 		<h1 id="wel"></h1>
-				<p>let's do it just click on "J.S Quiz" below and you can start challenging yourselft</p>
-    		 	<a class="btn btn-default" href="quiz.html" role="button">J.S Quiz</a>
-	         	<button class="btn btn-info" data-toggle="modal" data-target="#infoWindow">Info</button>
-    		</center>
-    	</div>
+      <div class="collapse navbar-collapse navHeaderCollapse">
+      	<ul class="nav navbar-nav navbar-right">
+           <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>-->
+           <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
+           <li><a href="../index.html">Logout</a></li>
+  		</ul>
+  		<h3 class="text-muted">Js Quiz</h3>
+      </div>
+    </div>
+  </div>
+  <div class="row">&nbsp;</div>
+  <!-- body -->
+  <div class="container">
+  	<div class="jumbotron">
+  	 	<center>
+  	 		<h1 id="wel"></h1>
+        <p>let's do it just click on "J.S Quiz" below and you can start challenging yourselft</p>
+  		 	<a class="btn btn-default" href="quiz.html" role="button">J.S Quiz</a>
+        <button class="btn btn-info" data-toggle="modal" data-target="#infoWindow">Info</button>
+  		</center>
+  	</div>
  	</div>
 
  	<!-- Info Modal Dialog-->
