--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 		<link rel="icon" href="resurces/jsfavicon.ico" type="image/x-icon">
 		<!-- css libraries-->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="pageStyle.css">
-		<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+		<link rel="stylesheet" type="text/css" href="css/pageStyle.css">
 		<!-- jquery libraries-->
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 		<!-- to make the page responsive -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!--js code-->
-		<script type="text/javascript" src="login/login.js"></script>
+		<script type="text/javascript" src="js/login.js"></script>
 	</head>
 	<body>
 		<!-- header body -->
@@ -38,35 +38,28 @@
     </center>
 		<div class="jumbotron boxlogin">
 			<form onsubmit="return false"><!--action attri defines the action to be performed when the form is submitted.-->
-				<!--<fieldset>--> <!--The <fieldset> element groups related data in a form-->
-					<center>
+				<center>
 					<legend class="brand">Js Quiz</legend>
-
 					<div class="form-group">
 						<label>Nick name*:</label>
-						<input type="text"  class="form-control" maxlength="12" id="unameID" title="Must have at least 12 characteres" name="username" placeholder="Js Nick" required autofocus>
-
+						<input type="text"  class="form-control" maxlength="12" id="unameID"
+             title="Must have at least 12 characteres" name="username" placeholder="Js Nick" required autofocus>
 						<div class="checkbox">
 							<label><input type="checkbox"> Remember me</label>
 						</div>
 					</div>
-
 					<label id="validate"></label>
-					<!--<div class="form-group">
-						<label>Password*:</label> <input type="password" id="accessID" name="access"><br><br>
-					</div>-->
-					<input type="button" id="submit" value="Submit" class="btn btn-lg btn-primary btn-block" title="click submit to login">
-					</center>
-				<!--</fieldset>-->
+					<input type="button" id="submit" value="Submit"
+            class="btn btn-lg btn-primary btn-block" title="click submit to login">
+				</center>
 			</form>
 		</div>
-		<!-- footer -->
-		<footer>
-	     <div class="container">
-	      	<p class="navbar-text pull-left">&copy; <em id="currYear"></em> Js Quiz. Make It By: Robin Hurtado</p>
-	   		<a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-	  	 	<a href="https://www.facebook.com/robin.aven" style="float:left;" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
-	      </div>
+		<footer> <!-- footer -->
+     <div class="container">
+        <p class="navbar-text pull-left">&copy; <em id="currYear"></em> Js Quiz. Make It By: Robin Hurtado</p>
+        <a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
+        <a href="https://www.facebook.com/robin.aven" style="float:left;" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
+      </div>
 		</footer>
 	</body>
 </html>
