--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<!-- form body -->
 		<center>
 		  <em class="firstMsg">
-        Hello, it is great having you here <br> Please pick a nickname to have access to the Quiz
+        Hello, it is great having you here <br> Please pick a nickname to have access to the Js Quiz
       </em>
     </center>
 		<div class="jumbotron boxlogin">
@@ -55,7 +55,7 @@
 			</form>
 		</div>
 		<footer> <!-- footer -->
-     <div class="container">
+      <div class="container">
         <p class="navbar-text pull-left">&copy; <em id="currYear"></em> Js Quiz. Make It By: Robin Hurtado</p>
         <a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
         <a href="https://www.facebook.com/robin.aven" style="float:left;" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
