--- a/html/welcome.html
+++ b/html/welcome.html
@@ -34,11 +34,11 @@
     <div class="container">
       <div class="collapse navbar-collapse navHeaderCollapse">
       	<ul class="nav navbar-nav navbar-right">
-           <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>-->
-           <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
-           <li><a href="../index.html">Logout</a></li>
-  		</ul>
-  		<h3 class="text-muted">Js Quiz</h3>
+          <!--<li class="active"><a href="extraPage.php">Contact Us</a></li>-->
+          <li><a href="#" onclick="alert('Comming Soon')">About Js Quiz</a></li>
+          <li><a href="../index.html">Logout</a></li>
+  		  </ul>
+  		  <h3 class="text-muted">Js Quiz</h3>
       </div>
     </div>
   </div>
@@ -54,40 +54,38 @@
   		</center>
   	</div>
  	</div>
-
  	<!-- Info Modal Dialog-->
  	<div id="infoWindow" class="modal fade" role="dialog">
  		<div class="modal-dialog">
-		    <!-- Modal content-->
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal">&times;</button>
-		        <h4 class="modal-title">Js Quiz</h4>
-		      </div>
-		      <div class="modal-body">
-		        <p>Hello, The reason for this quiz is to have a good opportunity to challenge yourself about
-		         a great and exciting programming language that is Javascript, invented By: Brendan Eich in
-		         10 days in May 1995.<br>The evolution of Javascript is so high that you can use J.s on the
-		         server side, you also can control Robots, open up web sockets for always-on communication,
-		         get data on geographical location and device features such as accelerometer, and much more.
-		 		<br>So believe me, it is a great time to learn Js.
-		        </p>
-		      </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-		      </div>
-		    </div>
+	    <!-- Modal content-->
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal">&times;</button>
+	        <h4 class="modal-title">Js Quiz</h4>
+	      </div>
+	      <div class="modal-body">
+	        <p>
+            Hello, The reason for this quiz is to have a good opportunity to challenge yourself about
+            a great and exciting programming language that is Javascript, invented By: Brendan Eich in
+            10 days in May 1995.<br>The evolution of Javascript is so high that you can use J.s on the
+            server side, you also can control Robots, open up web sockets for always-on communication,
+            get data on geographical location and device features such as accelerometer, and much more.
+            <br>So believe me, it is a great time to learn Js.
+          </p>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	      </div>
+	    </div>
 	  </div>
  	</div>
-
  	<!-- footer -->
-	<!--<iframe src="footer.html" frameborder="0" width="100%" height="58px" style="margin-top: 3%"></iframe>-->
 	<footer>
-     <div class="container">
-      	<p class="navbar-text pull-left">&copy; <em id="currYear"></em> Js Quiz. Make It By: Robin Hurtado</p>
-   		<a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
-  	 	<a href="https://www.facebook.com/robin.aven" style="float:left;" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
-      </div>
+    <div class="container">
+      <p class="navbar-text pull-left">&copy; <em id="currYear"></em> Js Quiz. Make It By: Robin Hurtado</p>
+      <a href="http://youtube.com" class="navbar-btn btn-danger btn pull-right">Suscribe on Youtube</a>
+      <a href="https://www.facebook.com/robin.aven" style="float:left;" class="navbar-btn btn-primary btn pull-left-center">Facebook</a>
+    </div>
 	</footer>
 </body>
 </html>
