Add My Bio, a profile pic and a google map

--- a/html/quiz2.html
+++ b/html/quiz2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Js Quiz Level 2</title>
@@ -12,8 +12,8 @@
 	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<!--css -->
 	<link rel="stylesheet" type="text/css" href="../css/pageStyle.css">
-	<!-- to make the page responsive -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- sets the width of the page to follow the screen-width of the device -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!--js code-->
 	<script type="text/javascript" src="../js/quiz2.js"></script>
 </head>
