add set rules and selectors

--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 			</form>
 		</div>
     <aside>
-      <h3>Who am i?</h3>
-      <img src="imgs/IMG_20150526_200415.jpg" alt="Robin Foto" style="width:200px;height:200px">
-      <p>My name is Robin Hurtado Abadia, I am a software developer, currently living in Medellín, i was born in this city <br> but i grew up in the pacifict coast, my passions involve: Programming, learning languages, travel, reading literature and nutrition.</p>
-      <div id="map" style="width:400px;height:400px">Medellín city</div>
+      <h3 class="who">Who am i?</h3>
+      <img src="imgs/IMG_20150526_200415.jpg" alt="Robin Foto" class="profile">
+      <p class="bio">My name is Robin Hurtado Abadia, I am a software developer, currently living in Medellín, i was born in this city <br> but i grew up in the pacifict coast, my passions involve: Programming, learning languages, travel, reading literature and nutrition.</p>
+      <div id="map" class="map" style="width:400px;height:400px">Medellín city</div>
       <script type="text/javascript">
         function medMap() {
           var mapOptions = {
